# demo-scene

./: .gitignore  README.md  package-lock.json  pull_request_template.md  sonar-project.properties
.github/: CODEOWNERS
adminrest/: README.md  docker-compose.yml
agentic-rag/: README.md
ansible-tower/: Makefile  README.md
azure-sqldw-sink-connector/: Makefile  README.md  azure.sqldw.json  docker-compose.yml
build-a-streaming-pipeline/: .gitignore  README.md  customers.sql  demo_build-a-streaming-pipeline.adoc  demo_build-a-streaming-pipeline.html  docker-compose.yml  ecs-params.yml  kafka-to-es-demo.adoc  ksqlDB.postman_collection.json  ksqldb-statements.sql  rest_example.sh  rmoff-qcon-ldn-workshop.rsa  title_slide.txt  workshop_ecs_admin.adoc
ccloud-cube-demo/: README.adoc
ccloud-disaster-recovery/: setup.sh
ccloud-replicator/: .env.example  create_replicator.sh  docker-compose.yml
cluster-linking/: README.md  docker-compose.yml
cluster-linking-disaster-recovery/: README.md  docker-compose.yml
cluster-linking-source-to-destination/: .env  README.md  docker-compose.yml
cluster-linking-topic-priorities/: README.md  apply-priorities.js  dest-link.config  run-apply-priorities.sh  simple-server.properties  simple-zookeeper.properties  source-link.config
community-components-only/: blog_test_data.sh  (+2 more)
confluent-lead-scoring-sample/: README.md  pyproject.toml
confluent-lead-scoring-sample/lead_scoring_transform/: configs.py  server_vertexai.py  transform.py
python-microservices/sauce-service/: config.properties  main.py  pyproject.toml
(+2059 files in other folders)
