[tool.poetry]
name = "sauce-service"
version = "0.1.0"
description = ""
authors = ["Dave Klein <daveklein@usa.net>"]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^1.8.2"
configparser = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
